testdata/golden/sema/invalid/ret_block_result_mismatch_nothing_first.sg
fn main(flag: bool) -> nothing {
    let x = {
        if flag {
            ret nothing;
        }
        ret 1;
    };
    x;
    return nothing;
}
